Removed Alpine.js source code

--- a/CleanArchitechureTemplate.Web/CleanArchitechureTemplate.Web.csproj
+++ b/CleanArchitechureTemplate.Web/CleanArchitechureTemplate.Web.csproj
@@ -7,4 +7,11 @@
     <BaseOutputPath>build\</BaseOutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="wwwroot\lib\alpinejs\src\**" />
+    <Content Remove="wwwroot\lib\alpinejs\src\**" />
+    <EmbeddedResource Remove="wwwroot\lib\alpinejs\src\**" />
+    <None Remove="wwwroot\lib\alpinejs\src\**" />
+  </ItemGroup>
+
 </Project>
